# seedbox-mcp

./: .env.example  .gitignore  LICENSE  README.md  justfile  pyproject.toml  spec.md
scripts/: deploy.sh  start.sh  watchdog.sh
src/seedbox_mcp/: __init__.py  config.py  errors.py  oauth.py  runtime.py  schemas.py  server.py
src/seedbox_mcp/chat/: ai.py  auth.py  config.py  mcp_client.py  server.py
src/seedbox_mcp/chat/static/: index.html
src/seedbox_mcp/clients/: __init__.py  arr.py  plex.py  tautulli.py
src/seedbox_mcp/tools/: common.py  plex.py  radarr.py  search.py  sonarr.py  staleness.py  status.py  tautulli.py
src/whatbox_media_mcp/: config.py  oauth.py  runtime.py  server.py
src/whatbox_media_mcp/chat/: ai.py  config.py
src/whatbox_media_mcp/chat/static/: index.html
src/whatbox_media_mcp/clients/: plex.py  tautulli.py
src/whatbox_media_mcp/tools/: common.py  plex.py  radarr.py  search.py  sonarr.py  staleness.py  status.py  tautulli.py
tests/: conftest.py  test_arr_client.py  test_config.py  test_live.py  test_oauth.py  test_plex_client.py  test_server.py  test_tools.py
tests/chat/: conftest.py  test_ai.py  test_config.py  test_live.py  test_server.py
